adicionar lógica de criação de curso e refatoração de serviços de tarefa